update template css js

--- a/static/user/css/PasswordRecovery.Head.styles.css
+++ b/static/user/css/PasswordRecovery.Head.styles.css
@@ -76,15 +76,15 @@ input(41575,53): run-time error CSS1062: Expected semicolon or closing curly-bra
 @charset 'UTF-8';
 
 .slick-loading .slick-list {
-    background: #fff url(/static/user/images/loading/loading-new.gif) center center no-repeat
+    background: #fff url(../lib_npm/slick/ajax-loader.gif) center center no-repeat
 }
 
 @font-face {
     font-family: slick;
     font-weight: 400;
     font-style: normal;
-    src: url(/static/user/fonts/slick.eot);
-    src: url(/static/user/fonts/slick.eot?#iefix) format('embedded-opentype'), url(/static/user/fonts/slick.woff) format('woff'), url(/static/user/fonts/slick.ttf) format('truetype'), url(/static/user/fonts/slick.svg#slick) format('svg')
+    src: url(../lib_npm/slick/fonts/slick.eot);
+    src: url(../lib_npm/slick/fonts/slick.eot?#iefix) format('embedded-opentype'),url(../lib_npm/slick/fonts/slick.woff) format('woff'),url(../lib_npm/slick/fonts/slick.ttf) format('truetype'),url(../lib_npm/slick/fonts/slick.svg#slick) format('svg')
 }
 
 .slick-next, .slick-prev {
@@ -4488,7 +4488,7 @@ body {
         #fullDescription .channel-html .row.large-display-bleed::after,
         #fullDescription .channel-html .row.large-display-bleed::before {
             display: block;
-            content: " ";
+            content: " ";
             position: absolute;
             top: 0;
             height: 100%;
@@ -4514,7 +4514,7 @@ body {
         #fullDescription .channel-html .row.medium-display-bleed::after,
         #fullDescription .channel-html .row.medium-display-bleed::before {
             display: block;
-            content: " ";
+            content: " ";
             position: absolute;
             top: 0;
             height: 100%;
@@ -4540,7 +4540,7 @@ body {
         #fullDescription .channel-html .row.small-display-bleed::after,
         #fullDescription .channel-html .row.small-display-bleed::before {
             display: block;
-            content: " ";
+            content: " ";
             position: absolute;
             top: 0;
             height: 100%;
@@ -11415,7 +11415,7 @@ a:hover {
     -ms-transition: all .2s;
     -o-transition: all .2s;
     transition: all .2s;
-    background-image: url(/static/user/images/icons/Top.png);
+    background-image: url(/images/uploaded-source/icon/Top.png);
     background-size: 12px;
     background-repeat: no-repeat;
     background-size: 20px;
@@ -11429,7 +11429,7 @@ a:hover {
 }
 
     .chat-box_toggle.active {
-        background: url(/static/user/images/icons/ic-contact-close.png) left center no-repeat;
+        background: url(/images/uploaded-source/icon/ic-contact-close.png) left center no-repeat;
         background-position: 0;
         background-size: 56px 56px !important;
         height: 56px;
@@ -31737,13 +31737,13 @@ label, label + * {
     z-index: 99999;
     width: 100vw;
     height: 100vh;
-    background: url('/static/user/images/loading/loading-new.gif') center no-repeat;
+    background: url('../Themes/SD/Content/images/loading.gif') center no-repeat;
     background-color: #5c5c5c;
     opacity: 0.4;
 }
 
 .please-wait {
-    background: url('/static/user/images/loading/loading-new.gif') no-repeat;
+    background: url('../Themes/SD/Content/images/ajax-loader-small.gif') no-repeat;
     padding-left: 20px;
     font-size: 14px;
 }
@@ -32102,7 +32102,7 @@ label, label + * {
     }
 
 .search-box .ui-autocomplete-loading {
-    background: #fff url('/static/user/images/loading/loading-new.gif') right center no-repeat;
+    background: #fff url('../Themes/SD/Content/images/ajax-loader-small.gif') right center no-repeat;
 }
 
 .ui-helper-hidden-accessible {
@@ -35556,7 +35556,7 @@ label, label + * {
 }
 
 .shipping-options-loading {
-    background: url(/static/user/images/loading/loading-new.gif) no-repeat;
+    background: url(../Themes/SD/Content/images/ajax-loader-small.gif) no-repeat;
     width: 16px;
     height: 16px;
     position: relative;
@@ -35768,7 +35768,7 @@ label, label + * {
         .product-estimate-shipping .shipping-title .shipping-loading {
             margin-left: 5px;
             vertical-align: middle;
-            background: url(/static/user/images/loading/loading-new.gif) no-repeat;
+            background: url(../Themes/SD/Content/images/ajax-loader-small.gif) no-repeat;
             width: 16px;
             height: 16px;
             display: inline-block;
