--- a/templates/user/layout/index.html
+++ b/templates/user/layout/index.html
@@ -132,9 +132,9 @@
                   <ul class="top-menu mobile">
                      <div class=header-links>
                         <ul class=popup-header-links>
-                           <li class=li_ico-register><a href="/register?returnUrl=%2F" class=ico-register>Tạo tài
+                           <li class=li_ico-register><a href="/registervuphone" class=ico-register>Tạo tài
                               khoản ngay</a>
-                           <li class=li_ico-login><a href="/login?returnUrl=%2F" class=ico-login>Đăng nhập</a>
+                           <li class=li_ico-login><a href="/loginvuphone" class=ico-login>Đăng nhập</a>
                            <li class=li_ico-wishlist><a href=/wishlist class=ico-wishlist> <span
                               class=wishlist-label>Danh sách yêu thích</span> <span
                               class=wishlist-qty>(0)</span> </a>
@@ -545,81 +545,17 @@
                         margin-right: 10px
                         }
                      </style>
-                     <div class=language-selector>
-                        <div class=icon-language><i class="fa-regular fa-globe"></i></div>
-                        <div><a style=font-size:16px;margin-left:8px;color:#1d1d1f ; data-toggle=collapse
-                           href=#collapseExample aria-expanded=false> Ngôn ngữ <button class=ic_lg_show
-                           onclick=myFunction()></button> </a></div>
-                        <div style=line-height:24px;margin-left:24px class=collapse id=collapseExample>
-                           <ul style=margin-top:8px;margin-bottom:1px class=cl-language-list>
-                              <li class=lang-li-ddl><img title="Tiếng Việt " alt="Tiếng Việt " class=selected
-                                 src=/static/user/images/flags/vn.png> <a style=font-size:14px;font-weight:400
-                                 href="https://shopdunk.com/changelanguage/2?returnUrl=%2F"
-                                 class=cl-lang-active>Ti&#x1EBF;ng Vi&#x1EC7;t </a>
-                              <li class=lang-li-ddl><img title=English alt=English src=/static/user/images/flags/us.png> <a
-                                 style=font-size:14px;font-weight:400
-                                 href="https://shopdunk.com/changelanguage/1?returnUrl=%2F">English</a>
-                           </ul>
-                        </div>
-                     </div>
-                     <div class=language-selector-flags>
-                        <div class=flag><a href="https://shopdunk.com/changelanguage/2?returnUrl=%2F"
-                           title="Tiếng Việt "> <img title="Tiếng Việt " alt="Tiếng Việt " class=selected
-                           src=/static/user/images/flags/vn.png> </a></div>
-                        <div class=flag><a href="https://shopdunk.com/changelanguage/1?returnUrl=%2F" title=English>
-                           <img title=English alt=English src=/static/user/images/flags/us.png> </a>
-                        </div>
-                     </div>
+                     
                   </ul>
                </div>
-               <div class="languague-flag mobile">
-                  <style>
-                     .cl-lang-active {
-                     color: #007bff !important
-                     }
-                     .lang-li-ddl {
-                     display: flex;
-                     align-items: center
-                     }
-                     .lang-li-ddl img {
-                     width: auto;
-                     height: 100%;
-                     margin-right: 10px
-                     }
-                  </style>
-                  <div class=language-selector>
-                     <div class=icon-language><i class="fa-regular fa-globe"></i></div>
-                     <div><a style=font-size:16px;margin-left:8px;color:#1d1d1f ; data-toggle=collapse
-                        href=#collapseExample aria-expanded=false> Ngôn ngữ <button class=ic_lg_show
-                        onclick=myFunction()></button> </a></div>
-                     <div style=line-height:24px;margin-left:24px class=collapse id=collapseExample>
-                        <ul style=margin-top:8px;margin-bottom:1px class=cl-language-list>
-                           <li class=lang-li-ddl><img title="Tiếng Việt " alt="Tiếng Việt " class=selected
-                              src=/static/user/images/flags/vn.png> <a style=font-size:14px;font-weight:400
-                              href="https://shopdunk.com/changelanguage/2?returnUrl=%2F"
-                              class=cl-lang-active>Ti&#x1EBF;ng Vi&#x1EC7;t </a>
-                           <li class=lang-li-ddl><img title=English alt=English src=/static/user/images/flags/us.png> <a
-                              style=font-size:14px;font-weight:400
-                              href="">English</a>
-                        </ul>
-                     </div>
-                  </div>
-                  <div class=language-selector-flags>
-                     <div class=flag><a href=""
-                        title="Tiếng Việt "> <img title="Tiếng Việt " alt="Tiếng Việt " class=selected
-                        src=/static/user/images/flags/vn.png> </a></div>
-                     <div class=flag><a href="" title=English>
-                        <img title=English alt=English src=/static/user/images/flags/us.png> </a>
-                     </div>
-                  </div>
-               </div>
+               
                <div class=header-links-wrapper>
                   <div class=search-icon></div>
                   <div class=header-links>
                      <ul class=popup-header-links>
-                        <li class=li_ico-register><a href="/register?returnUrl=%2F" class=ico-register>Tạo tài khoản
+                        <li class=li_ico-register><a href="/registervuphone" class=ico-register>Tạo tài khoản
                            ngay</a>
-                        <li class=li_ico-login><a href="/login?returnUrl=%2F" class=ico-login>Đăng nhập</a>
+                        <li class=li_ico-login><a href="/loginvuphone" class=ico-login>Đăng nhập</a>
                         <li class=li_ico-wishlist><a href=/wishlist class=ico-wishlist> <span
                            class=wishlist-label>Danh sách yêu thích</span> <span
                            class=wishlist-qty>(0)</span> </a>
@@ -644,39 +580,15 @@
                         margin-right: 10px
                         }
                      </style>
-                     <div class=language-selector>
-                        <div class=icon-language><i class="fa-regular fa-globe"></i></div>
-                        <div><a style=font-size:16px;margin-left:8px;color:#1d1d1f ; data-toggle=collapse
-                           href=#collapseExample aria-expanded=false> Ngôn ngữ <button class=ic_lg_show
-                           onclick=myFunction()></button> </a></div>
-                        <div style=line-height:24px;margin-left:24px class=collapse id=collapseExample>
-                           <ul style=margin-top:8px;margin-bottom:1px class=cl-language-list>
-                              <li class=lang-li-ddl><img title="Tiếng Việt " alt="Tiếng Việt " class=selected
-                                 src=/static/user/images/flags/vn.png> <a style=font-size:14px;font-weight:400
-                                 href=""
-                                 class=cl-lang-active>Ti&#x1EBF;ng Vi&#x1EC7;t </a>
-                              <li class=lang-li-ddl><img title=English alt=English src=/static/user/images/flags/us.png> <a
-                                 style=font-size:14px;font-weight:400
-                                 href="">English</a>
-                           </ul>
-                        </div>
-                     </div>
-                     <div class=language-selector-flags>
-                        <div class=flag><a href=""
-                           title="Tiếng Việt "> <img title="Tiếng Việt " alt="Tiếng Việt " class=selected
-                           src=/static/user/images/flags/vn.png> </a></div>
-                        <div class=flag><a href="" title=English>
-                           <img title=English alt=English src=/static/user/images/flags/us.png> </a>
-                        </div>
-                     </div>
+                     
                   </div>
                </div>
                <div class=account-desktop>
                   <div class=header-links>
                      <ul class=popup-header-links>
-                        <li class=li_ico-register><a href="" class=ico-register>Tạo tài khoản
+                        <li class=li_ico-register><a href="/registervuphone" class=ico-register>Tạo tài khoản
                            ngay</a>
-                        <li class=li_ico-login><a href="" class=ico-login>Đăng nhập</a>
+                        <li class=li_ico-login><a href="/loginvuphone" class=ico-login>Đăng nhập</a>
                         <li class=li_ico-wishlist><a href=/wishlist class=ico-wishlist> <span
                            class=wishlist-label>Danh sách yêu thích</span> <span
                            class=wishlist-qty>(0)</span> </a>
@@ -765,9 +677,9 @@
                <ul class="top-menu mobile">
                   <div class=header-links>
                      <ul class=popup-header-links>
-                        <li class=li_ico-register><a href="/register?returnUrl=%2F" class=ico-register>Tạo tài khoản
+                        <li class=li_ico-register><a href="/registervuphone" class=ico-register>Tạo tài khoản
                            ngay</a>
-                        <li class=li_ico-login><a href="/login?returnUrl=%2F" class=ico-login>Đăng nhập</a>
+                        <li class=li_ico-login><a href="/loginvuphone" class=ico-login>Đăng nhập</a>
                         <li class=li_ico-wishlist><a href=/wishlist class=ico-wishlist> <span
                            class=wishlist-label>Danh sách yêu thích</span> <span
                            class=wishlist-qty>(0)</span> </a>
@@ -1163,31 +1075,7 @@
                      margin-right: 10px
                      }
                   </style>
-                  <div class=language-selector>
-                     <div class=icon-language><i class="fa-regular fa-globe"></i></div>
-                     <div><a style=font-size:16px;margin-left:8px;color:#1d1d1f ; data-toggle=collapse
-                        href=#collapseExample aria-expanded=false> Ngôn ngữ <button class=ic_lg_show
-                        onclick=myFunction()></button> </a></div>
-                     <div style=line-height:24px;margin-left:24px class=collapse id=collapseExample>
-                        <ul style=margin-top:8px;margin-bottom:1px class=cl-language-list>
-                           <li class=lang-li-ddl><img title="Tiếng Việt " alt="Tiếng Việt " class=selected
-                              src=/static/user/images/flags/vn.png> <a style=font-size:14px;font-weight:400
-                              href="https://shopdunk.com/changelanguage/2?returnUrl=%2F"
-                              class=cl-lang-active>Ti&#x1EBF;ng Vi&#x1EC7;t </a>
-                           <li class=lang-li-ddl><img title=English alt=English src=/static/user/images/flags/us.png> <a
-                              style=font-size:14px;font-weight:400
-                              href="">English</a>
-                        </ul>
-                     </div>
-                  </div>
-                  <div class=language-selector-flags>
-                     <div class=flag><a href=""
-                        title="Tiếng Việt "> <img title="Tiếng Việt " alt="Tiếng Việt " class=selected
-                        src=/static/user/images/flags/vn.png> </a></div>
-                     <div class=flag><a href="" title=English>
-                        <img title=English alt=English src=/static/user/images/flags/us.png> </a>
-                     </div>
-                  </div>
+                  
                </ul>
             </div>
          </div>
